--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "express-session": "^1.15.6",
     "mongodb": "^2.2.33",
     "swig": "^1.4.2"
   }
